--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,10 @@ swc_site        : "http://software-carpentry.org"
 swc_twitter     : "http://twitter.com/swcarpentry"
 swc_vm          : "https://docs.google.com/uc?id=0B4Kr6DYkzkQtSTZLQzF4aVB4NDQ&export=download"
 #--------------------------------------------------------------------------------
+# Standard Data Carpentry settings - should not need to be modified.
+#--------------------------------------------------------------------------------
+dc_site        : "http://datacarpentry.github.io"
+#--------------------------------------------------------------------------------
 # Settings for Jekyll - should not need to be modified.
 #--------------------------------------------------------------------------------
 markdown        : kramdown
